Add link for deployment cancel action
- Only visible if the deployment is cancelable

Authored-by: Greg Cobb <gcobb@pivotal.io>

--- a/docs/v3/source/includes/api_resources/_deployments.erb
+++ b/docs/v3/source/includes/api_resources/_deployments.erb
@@ -46,6 +46,10 @@
     },
     "app": {
       "href": "https://api.example.org/v3/apps/305cea31-5a44-45ca-b51b-e89c7a8ef8b2"
+    },
+    "cancel": {
+      "href": "https://api.example.org/v3/deployments/59c3d133-2b83-46f3-960e-7765a129aea4/actions/cancel",
+      "method": "POST"
     }
   }
 }
