--- a/docs/v3/source/includes/resources/domains/_list_domains_for_an_org.md.erb
+++ b/docs/v3/source/includes/resources/domains/_list_domains_for_an_org.md.erb
@@ -38,7 +38,7 @@ organization), and domains that have been shared with the organization.
 | **page**               | _integer_         | Page to display; valid values are integers >= 1                                                             |
 | **per_page**           | _integer_         | Number of results per page; <br>valid values are 1 through 5000                                             |
 | **order_by**           | _string_          | Value to sort by. Defaults to ascending; prepend with `-` to sort descending<br>Valid values are `created_at`, `updated_at`
-| **label_selector** (*experimental*)| _string_ | A query string containing a list of [label selector](#labels-and-selectors) requirements |
+| **label_selector** | _string_ | A query string containing a list of [label selector](#labels-and-selectors) requirements |
 
 #### Permitted roles
 
