--- a/docs/v3/source/includes/resources/service_offerings/_list.md.erb
+++ b/docs/v3/source/includes/resources/service_offerings/_list.md.erb
@@ -36,7 +36,7 @@ Name | Type | Description
 **service_broker_names** | _list of strings_ | Comma-delimited list of service broker names to filter by
 **space_guids** | _list of strings_ | Comma-delimited list of space GUIDs to filter by
 **organization_guids** | _list of strings_ | Comma-delimited list of organization GUIDs to filter by
-**label_selector** (*experimental*)| _string_ | A query string containing a list of [label selector](#labels-and-selectors) requirements
+**label_selector** | _string_ | A query string containing a list of [label selector](#labels-and-selectors) requirements
 **fields** (*experimental*)| [_fields parameter_](#fields-parameter) | [_Allowed values_](#service-offerings-list-fields)
 **page** | _integer_ | Page to display; valid values are integers >= 1
 **per_page** | _integer_ | Number of results per page; <br>valid values are 1 through 5000
