--- a/docs/v3/source/includes/resources/service_plans/_list.md.erb
+++ b/docs/v3/source/includes/resources/service_plans/_list.md.erb
@@ -44,7 +44,7 @@ Name | Type | Description
 **page** | _integer_ | Page to display; valid values are integers >= 1
 **per_page** | _integer_ | Number of results per page; <br>valid values are 1 through 5000
 **order_by** | _string_ | Value to sort by. Defaults to ascending; prepend with `-` to sort descending<br>Valid values are `created_at` and `updated_at`
-**label_selector** (*experimental*)| _string_ | A query string containing a list of [label selector](#labels-and-selectors) requirements
+**label_selector** | _string_ | A query string containing a list of [label selector](#labels-and-selectors) requirements
 **fields** (*experimental*)| [_fields parameter_](#fields-parameter) | [_Allowed values_](#service-plans-list-fields)
 
 The **organization_guids** and **space_guids** filters do not filter plans that are public.
